RESOLVED FIXED132459
[iOS WK2] Can't scroll on gatesnotes.com
https://bugs.webkit.org/show_bug.cgi?id=132459
Summary [iOS WK2] Can't scroll on gatesnotes.com
Simon Fraser (smfr)
Reported 2014-05-01 20:26:02 PDT
[iOS WK2] Can't scroll on gatesnotes.com
Attachments
Patch (3.16 KB, patch)
2014-05-01 20:27 PDT, Simon Fraser (smfr)
benjamin: review+
Simon Fraser (smfr)
Comment 1 2014-05-01 20:27:32 PDT
Simon Fraser (smfr)
Comment 2 2014-05-01 20:28:16 PDT
Benjamin Poulain
Comment 3 2014-05-01 20:29:35 PDT
Comment on attachment 230647 [details] Patch Make sense.
Simon Fraser (smfr)
Comment 4 2014-05-02 10:30:02 PDT
Note You need to log in before you can comment on or make changes to this bug.