[iOS WK2] Can't scroll on gatesnotes.com https://bugs.webkit.org/show_bug.cgi?id=132459 <rdar://problem/16770909>

Reviewed by Benjamin Poulain.

The custom UIView hit-testing code was finding views that were created by
the compositing code for clipping, above the UIScrollViews. We only ever
need to find UIScrollViews here for touch overflow-scrolling, so constrain
the hit-testing code to only return UIScrollViews.

* UIProcess/ios/RemoteLayerTreeHostIOS.mm:
(-[UIView _recursiveFindDescendantScrollViewAtPoint:withEvent:]):
(-[UIView _findDescendantViewAtPoint:withEvent:]):
(-[UIView _recursiveFindDescendantViewAtPoint:withEvent:]): Deleted.

Canonical link: https://commits.webkit.org/150506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168174 268f45cc-cd09-0410-ab3c-d52691b4dbfc